# bug-tracker

./: .env_dev  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/: deps.py
api/api_v1/: api.py
api/api_v1/endpoints/: login.py  managers.py  tasks.py  users.py
core/: config.py  security.py
db/: base.py
enums/: base.py
migrations/: env.py
migrations/versions/: ae2cd3de84ff_initial.py
models/: task.py  user.py
schemas/: task.py  token.py  user.py
services/: task.py  user.py
tests/: conftest.py
tests/api/api_v1/: test_login.py  test_managers.py  test_tasks.py  test_users.py
tests/utils/: task.py  user.py  utils.py
