[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["Danis <zinnatullin2012@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
ormar = {extras = ["postgresql"], version = "^0.10.24"}
alembic = "^1.7.6"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

